--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,9 @@ edition = "2021"
 [dependencies]
 bootloader = "0.10.12"
 x86_64 = "0.14.10"
+uart_16550 = "0.2.18"
+spin = "0.9.4"
+
+[dependencies.lazy_static]
+version = "1.4.0"
+features = ["spin_no_std"]
