--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,9 @@ x86_64 = "0.14.10"
 uart_16550 = "0.2.18"
 spin = "0.9.4"
 linked_list_allocator = "0.10.1"
+acpi = "4.1.1"
+aml = "0.16.1"
+log = "0.4.17"
 
 [dependencies.lazy_static]
 version = "1.4.0"
