--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ linked_list_allocator = "0.10.1"
 acpi = "4.1.1"
 aml = "0.16.1"
 log = "0.4.17"
+pci_types = "0.2.0"
 
 [dependencies.lazy_static]
 version = "1.4.0"
@@ -21,3 +22,4 @@ features = ["spin_no_std"]
 
 [package.metadata.bootloader]
 map-page-table-recursively = true
+kernel-stack-size = 1048576
