--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ acpi = "4.1.1"
 aml = "0.16.1"
 log = "0.4.17"
 pci_types = "0.2.0"
+bitfield-struct = "0.1.7"
 
 [dependencies.lazy_static]
 version = "1.4.0"
