--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,9 @@ linked_list_allocator = "0.10.1"
 acpi = "4.1.1"
 aml = "0.16.1"
 log = "0.4.17"
-pci_types = "0.2.0"
 bitfield-struct = "0.1.7"
+bit_field = "0.10.1"
+volatile = "0.4.5"
 
 [dependencies.lazy_static]
 version = "1.4.0"
